--- a/about.html
+++ b/about.html
@@ -224,38 +224,43 @@
                       <div class="px-6 md:px-16  mt-3 md:mt-8">
 
                         <div class="font-content text-base md:text-2xl mt-3 md:mt-0 tracking-normal text-justify
-                                    flex flex-row gap-4 md:gap-x-10 md:gap-y-12 flex-wrap">
+                                    flex flex-row gap-4 md:gap-x-10 md:gap-y-12 flex-wrap justify-between">
                           
-                            <p><span class="inline"><img class="h-8 rounded-xl mr-2 inline" src="./assets/images/me_1000.jpg"/></span>Python</p>
-                            <p><span class="inline"><img class="h-8 rounded-xl mr-2 inline" src="./assets/images/me_1000.jpg"/></span>Python</p>
-                            <p><span class="inline"><img class="h-8 rounded-xl mr-2 inline" src="./assets/images/me_1000.jpg"/></span>Python</p>
-                            <p><span class="inline"><img class="h-8 rounded-xl mr-2 inline" src="./assets/images/me_1000.jpg"/></span>Python</p>
-                            <p><span class="inline"><img class="h-8 rounded-xl mr-2 inline" src="./assets/images/me_1000.jpg"/></span>Python</p>
-                            <p><span class="inline"><img class="h-8 rounded-xl mr-2 inline" src="./assets/images/me_1000.jpg"/></span>Python</p>
-                            <p><span class="inline"><img class="h-8 rounded-xl mr-2 inline" src="./assets/images/me_1000.jpg"/></span>Python</p>
-                            <p><span class="inline"><img class="h-8 rounded-xl mr-2 inline" src="./assets/images/me_1000.jpg"/></span>Python</p>
-                            <p><span class="inline"><img class="h-8 rounded-xl mr-2 inline" src="./assets/images/me_1000.jpg"/></span>Python</p>
-                            <p><span class="inline"><img class="h-8 rounded-xl mr-2 inline" src="./assets/images/me_1000.jpg"/></span>Python</p>
-                            <p><span class="inline"><img class="h-8 rounded-xl mr-2 inline" src="./assets/images/me_1000.jpg"/></span>Python</p>
-                            <p><span class="inline"><img class="h-8 rounded-xl mr-2 inline" src="./assets/images/me_1000.jpg"/></span>Python</p>
-                            <p><span class="inline"><img class="h-8 rounded-xl mr-2 inline" src="./assets/images/me_1000.jpg"/></span>Python</p>
-                            <p><span class="inline"><img class="h-8 rounded-xl mr-2 inline" src="./assets/images/me_1000.jpg"/></span>Python</p>
-                            <p><span class="inline"><img class="h-8 rounded-xl mr-2 inline" src="./assets/images/me_1000.jpg"/></span>Python</p>
-                            <p><span class="inline"><img class="h-8 rounded-xl mr-2 inline" src="./assets/images/me_1000.jpg"/></span>Python</p>
-                            <p><span class="inline"><img class="h-8 rounded-xl mr-2 inline" src="./assets/images/me_1000.jpg"/></span>Python</p>
-                            <p><span class="inline"><img class="h-8 rounded-xl mr-2 inline" src="./assets/images/me_1000.jpg"/></span>Python</p>
-                            <p><span class="inline"><img class="h-8 rounded-xl mr-2 inline" src="./assets/images/me_1000.jpg"/></span>Python</p>
-                            <p><span class="inline"><img class="h-8 rounded-xl mr-2 inline" src="./assets/images/me_1000.jpg"/></span>Python</p>
-                            <p><span class="inline"><img class="h-8 rounded-xl mr-2 inline" src="./assets/images/me_1000.jpg"/></span>Python</p>
-                            <p><span class="inline"><img class="h-8 rounded-xl mr-2 inline" src="./assets/images/me_1000.jpg"/></span>Python</p>
-                            <p><span class="inline"><img class="h-8 rounded-xl mr-2 inline" src="./assets/images/me_1000.jpg"/></span>Python</p>
-                            <p><span class="inline"><img class="h-8 rounded-xl mr-2 inline" src="./assets/images/me_1000.jpg"/></span>Python</p>
-                            <p><span class="inline"><img class="h-8 rounded-xl mr-2 inline" src="./assets/images/me_1000.jpg"/></span>Python</p>
-                            <p><span class="inline"><img class="h-8 rounded-xl mr-2 inline" src="./assets/images/me_1000.jpg"/></span>Python</p>
-                            <p><span class="inline"><img class="h-8 rounded-xl mr-2 inline" src="./assets/images/me_1000.jpg"/></span>Python</p>
-                            <p><span class="inline"><img class="h-8 rounded-xl mr-2 inline" src="./assets/images/me_1000.jpg"/></span>Python</p>
-                            <p><span class="inline"><img class="h-8 rounded-xl mr-2 inline" src="./assets/images/me_1000.jpg"/></span>Python</p>
-
+                            <p><span class="inline"><img class="h-8 rounded-xl mr-2 inline" src="./assets/images/tools/Python.webp"/></span>Python</p>  
+                            <p><span class="inline"><img class="h-8 rounded-xl mr-2 inline" src="./assets/images/tools/JS.webp"/></span>JavaScript</p>
+                            <p><span class="inline"><img class="h-8 rounded-xl mr-2 inline" src="./assets/images/tools/C.webp"/></span>C</p>  
+                            <p><span class="inline"><img class="h-8 rounded-xl mr-2 inline" src="./assets/images/tools/CPP.webp"/></span>C++</p>
+                            <p><span class="inline"><img class="h-8 rounded-xl mr-2 inline" src="./assets/images/tools/Tensorflow.webp"/></span>TensorFlow</p>
+                            <p><span class="inline"><img class="h-8 rounded-xl mr-2 inline" src="./assets/images/tools/React.webp"/></span>ReactJS</p>  
+                            <p><span class="inline"><img class="h-8 rounded-xl mr-2 inline" src="./assets/images/tools/Node.webp"/></span>NodeJS</p>  
+                            <p><span class="inline"><img class="h-8 rounded-xl mr-2 inline" src="./assets/images/tools/Express.webp"/></span>ExpressJS</p>  
+                            <p><span class="inline"><img class="h-8 rounded-xl mr-2 inline" src="./assets/images/tools/MongoDB.webp"/></span>MongoDB</p>  
+                            <p><span class="inline"><img class="h-8 rounded-xl mr-2 inline" src="./assets/images/tools/SQL.webp"/></span>SQL</p>  
+                            <p><span class="inline"><img class="h-8 rounded-xl mr-2 inline" src="./assets/images/tools/MySQL.webp"/></span>MySQL</p>  
+                            <p><span class="inline"><img class="h-8 rounded-xl mr-2 inline" src="./assets/images/tools/Firebase.webp"/></span>Firebase</p>  
+                            <p><span class="inline"><img class="h-8 rounded-xl mr-2 inline" src="./assets/images/tools/TailwindCSS.webp"/></span>TailwindCSS</p>  
+                            <p><span class="inline"><img class="h-8 rounded-xl mr-2 inline" src="./assets/images/tools/Bootstrap.webp"/></span>Bootstrap</p>  
+                            <p><span class="inline"><img class="h-8 rounded-xl mr-2 inline" src="./assets/images/tools/Git.webp"/></span>Git</p>  
+                            <p><span class="inline"><img class="h-8 rounded-xl mr-2 inline" src="./assets/images/tools/PHP.webp"/></span>PHP</p>  
+                            <p><span class="inline"><img class="h-8 rounded-xl mr-2 inline" src="./assets/images/tools/RESTapi.webp"/></span>REST API</p>  
+                            <p><span class="inline"><img class="h-8 rounded-xl mr-2 inline" src="./assets/images/tools/OpenCV.webp"/></span>OpenCV</p>  
+                            <p><span class="inline"><img class="h-8 rounded-xl mr-2 inline" src="./assets/images/tools/PyTorch.webp"/></span>PyTorch</p>  
+                            <p><span class="inline"><img class="h-8 rounded-xl mr-2 inline" src="./assets/images/tools/Keras.webp"/></span>Keras</p>  
+                            <p><span class="inline"><img class="h-8 rounded-xl mr-2 inline" src="./assets/images/tools/Figma.webp"/></span>Figma</p>  
+                            <p><span class="inline"><img class="h-8 rounded-xl mr-2 inline" src="./assets/images/tools/AWS.webp"/></span>Amazon Web Services</p>  
+                            <p><span class="inline"><img class="h-8 rounded-xl mr-2 inline" src="./assets/images/tools/AWSS3.webp"/></span>AWS SDK</p>  
+                            <p><span class="inline"><img class="h-8 rounded-xl mr-2 inline" src="./assets/images/tools/PalmAPI.webp"/></span>Google PALM API</p>  
+                            <p><span class="inline"><img class="h-8 rounded-xl mr-2 inline" src="./assets/images/tools/OpenAI.webp"/></span>OpenAI</p>  
+                            <p><span class="inline"><img class="h-8 rounded-xl mr-2 inline" src="./assets/images/tools/LangChain.webp"/></span>LangChain</p>  
+                            <p><span class="inline"><img class="h-8 rounded-xl mr-2 inline" src="./assets/images/tools/PowerBI.webp"/></span>PowerBI</p>  
+                            <p><span class="inline"><img class="h-8 rounded-xl mr-2 inline" src="./assets/images/tools/Matlab.webp"/></span>MATLAB</p>  
+                            <p><span class="inline"><img class="h-8 rounded-xl mr-2 inline" src="./assets/images/tools/Arduino.webp"/></span>Arduino</p>  
+                            <p><span class="inline"><img class="h-8 rounded-xl mr-2 inline" src="./assets/images/tools/Photoshop.webp"/></span>Photoshop</p>  
+                            <p><span class="inline"><img class="h-8 rounded-xl mr-2 inline" src="./assets/images/tools/Illustrator.webp"/></span>Illustrator</p>  
+                            <p><span class="inline"><img class="h-8 rounded-xl mr-2 inline" src="./assets/images/tools/AfterEffects.webp"/></span>After Effects</p>  
+                            <p><span class="inline"><img class="h-8 rounded-xl mr-2 inline" src="./assets/images/tools/PremierePro.webp"/></span>Premiere Pro</p>
+                            <p><span class="inline"><img class="h-8 rounded-xl mr-2 inline" src="./assets/images/tools/Blender.webp"/></span>Blender</p>
+                            
                         </div>
 
                       </div>
