--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
                       <p class=" col-span-8 text-3xl md:text-7xl text-left font-title">RESEARCH</p>
                       <div class="col-span-1"></div>
                       <p class="hidden md:text-base col-span-3 tracking-normal hidden text-black group-hover:block font-bold text-left font-content">
-                        Engaged in research endeavors spanning AI, Evolutionary Computation, Generative AI, Creativity, and Image Processing domains.
+                        Engaged in research endeavors spanning AI, Evolutionary Computation, Generative AI, and Computational Creativity.
                       </p>
                       <span class="z-[-9999] absolute top-0 left-0 flex w-0 h-full mb-0 transition-all duration-700 ease-out transform translate-x-0 bg-highlight group-hover:w-full"></span>
                     </div>
@@ -227,7 +227,7 @@
                       <p class=" col-span-8 text-3xl md:text-7xl text-left font-title">UI/UX & BRANDING</p>
                       <div class="col-span-1"></div>
                       <p class="hidden md:text-base col-span-3 tracking-normal hidden text-black group-hover:block font-bold text-left font-content">
-                        Conceptualized impactful UI/UX designs for numerous local businesses, crafting distinctive branding elements and logos as well.
+                        Conceptualized impactful UI/UX designs for numerous local businesses, crafting branding elements and logos as well.
                       </p>
                       <span class="z-[-9999] absolute top-0 left-0 flex w-0 h-full mb-0 transition-all duration-700 ease-out transform translate-x-0 bg-highlight group-hover:w-full"></span>
                     </div>
@@ -380,7 +380,7 @@
                 </div>
 
                 <!-- about -->
-                <div id="vol" class="cursor-default tracking-tight my-16 w-full h-auto text-white flex flex-col items-center justify-center">
+                <div id="about" class="cursor-default tracking-tight my-16 w-full h-auto text-white flex flex-col items-center justify-center">
                   <div class="flex-1 font-sans font-bold text-7xl w-full">
                       <p class="px-6 md:px-16 mb-3 md:text-4xl text-2xl font-title">About me
                         <a href="./about.html" class="ml-2 cursor-pointer text-base text-highlight hover:underline inline ">
@@ -575,7 +575,7 @@
           <div class="w-full  gap-x-6 flex md:flex-row flex-col my-4">
             
             <div class="w-full ">
-              <img class="w-[60%] m-auto" src="./assets/images/me_1000.jpg"/>
+              <img class="w-[80%] m-auto" src="./assets/images/popup/dummy.jpg"/>
             </div>
 
             <div class="w-full  tracking-tight">
@@ -594,8 +594,8 @@
 
           <div class="w-full  my-4">
             <p class="font-title text-xl text-left md:text-3xl md:mb-6 mb-2 font-bold">Tools / Technology Used</p>
-            <div class="flex flex-row flex-wrap gap-4 md:gap-x-10 md:gap-y-12">
-              <p><span class="inline"><img class="h-8 rounded-xl mr-2 inline" src="./assets/images/me_1000.jpg"/></span>Python</p>
+            <div id="tools_used" class="flex flex-row flex-wrap gap-4 md:gap-x-10 md:gap-y-12">
+              <p><span class="inline"><img class="h-8 rounded-xl mr-2 inline" src="./assets/images/tools/Python.jpg"/></span>Python</p>
               <p><span class="inline"><img class="h-8 rounded-xl mr-2 inline" src="./assets/images/me_1000.jpg"/></span>Python</p>
               <p><span class="inline"><img class="h-8 rounded-xl mr-2 inline" src="./assets/images/me_1000.jpg"/></span>Python</p>
               <p><span class="inline"><img class="h-8 rounded-xl mr-2 inline" src="./assets/images/me_1000.jpg"/></span>Python</p>
