--- a/about.html
+++ b/about.html
@@ -78,7 +78,7 @@
                           <div class=" col-span-9 font-content text-base md:text-2xl mt-3 md:mt-0 tracking-normal text-justify">
                             
                               <p class=" md:leading-[3.5rem]">
-                                An ambitious undergraduate student with a year of software engineering internship experience and three years of freelance work, bringing a blend of technical expertise and leadership skills. Demonstrated strong organizational and interpersonal abilities through team management, coordination of university events, and leadership roles in clubs. Currently involved in cutting-edge research projects.
+                                An ambitious engineering graduate with a year of software engineering internship experience and three years of freelance work, bringing a blend of technical expertise and leadership skills. Demonstrated strong organizational and interpersonal abilities through team management, coordination of university events, and leadership roles in clubs. Currently involved in cutting-edge research projects.
                               </p>
 
                           </div>
@@ -604,7 +604,7 @@
                   <div class="px-6 md:px-16 grid md:grid-cols-3 grid-cols-2 grid-row-2 md:grid-row-1 w-full">
                     
                     <div class="p-4 flex flex-col gap-y-4">
-                      <a href="https://www.linkedin.com/in/imveeru14/" class="md:text-4xl text-2xl font-title font-bold hover:text-highlight cursor-pointer">
+                      <a target="_blank" href="https://www.linkedin.com/in/imveeru14/" class="md:text-4xl text-2xl font-title font-bold hover:text-highlight cursor-pointer">
                         <span class="inline md:mr-2">
                           <svg class="inline h-4" id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 370 384.166667">
                             <defs>
@@ -620,7 +620,7 @@
                         LinkedIn
                       </a>
 
-                      <a href="github.com/imveeru/" class="md:text-4xl text-2xl font-title font-bold hover:text-highlight cursor-pointer">
+                      <a target="_blank" href="github.com/imveeru/" class="md:text-4xl text-2xl font-title font-bold hover:text-highlight cursor-pointer">
                         <span class="inline md:mr-2">
                           <svg class="inline h-4" id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 370 384.166667">
                             <defs>
@@ -638,7 +638,7 @@
                     </div>
 
                     <div class="p-4 flex flex-col gap-y-4">
-                      <a href="behance.net/imveeru14" class="md:text-4xl text-2xl font-title font-bold hover:text-highlight cursor-pointer">
+                      <a target="_blank" href="behance.net/imveeru14" class="md:text-4xl text-2xl font-title font-bold hover:text-highlight cursor-pointer">
                         <span class="inline md:mr-2">
                           <svg class="inline h-4" id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 370 384.166667">
                             <defs>
@@ -654,7 +654,7 @@
                         Behance
                       </a>
 
-                      <a href="" class="md:text-4xl text-2xl font-title font-bold hover:text-highlight cursor-pointer">
+                      <a target="_blank" href="" class="md:text-4xl text-2xl font-title font-bold hover:text-highlight cursor-pointer">
                         <span class="inline md:mr-2">
                           <svg class="inline h-4" id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 370 384.166667">
                             <defs>
@@ -672,11 +672,11 @@
                     </div>
 
                     <div class="p-4 flex flex-col gap-y-4 col-span-2 md:col-span-1">
-                      <a href="" class="md:text-4xl text-2xl font-title font-bold">
+                      <a class="md:text-4xl text-2xl font-title font-bold">
                         Stay in touch,
                       </a>
 
-                      <a href="" class="md:text-4xl text-2xl font-title font-bold hover:text-highlight cursor-pointer">
+                      <a href="mailto:imveeru14@gmail.com" class="md:text-4xl text-2xl font-title font-bold hover:text-highlight cursor-pointer">
                         imveeru14@gmail.com
                       </a>
                     </div>
