--- a/index.html
+++ b/index.html
@@ -399,17 +399,19 @@
                         <!-- flex flex-col justify-between -->
                         <div class=" col-span-9 font-content text-base md:text-2xl mt-3 md:mt-0 tracking-normal text-justify">
                           
-                            <p class=" md:leading-[3.5rem]">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dol
-                            <span><img class="inline h-10 mx-1 rounded-full" src="/assets/images/jisoo mock.jpg"</span>
-                            delectus quia libero <span><img class="inline h-10 mx-1 rounded-full" src="/assets/images/jisoo mock.jpg"</span>
-                             aliquid temporibus molestias! Qui ratione
-                            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dol
-                            <span><img class="inline h-10 mx-1 rounded-full" src="/assets/images/jisoo mock.jpg"</span>
-                            delectus quia libero aliquid temporibus
-                            <span><img class="inline h-10 mx-1 rounded-full" src="/assets/images/jisoo mock.jpg"</span>
-                            mo Qui ratione 
-                            <span><img class="inline h-10 mx-1 rounded-full" src="/assets/images/jisoo mock.jpg"</span>
-                            delectus quia libero aliquid temporibus molestias! Qui ratione</p>
+                            <p class=" md:leading-[3.5rem]">An ambitious engineering graduate 
+                            <!-- <span><img class="inline h-10 mx-1 rounded-full" src="/assets/images/jisoo mock.jpg"</span> -->
+                            with a year of software engineering internship experience and 3 years of freelancing, bringing a blend of
+                            <!-- <span><img class="inline h-10 mx-1 rounded-full" src="/assets/images/jisoo mock.jpg"</span> -->
+                            technical expertise 
+                            <!-- <span><img class="inline h-10 mx-1 rounded-full" src="/assets/images/jisoo mock.jpg"</span> -->
+                            and leadership skills.
+                            Demonstrated strong organizational and interpersonal abilities through team management
+                            <!-- <span><img class="inline h-10 mx-1 rounded-full" src="/assets/images/jisoo mock.jpg"</span> -->
+                            coordination of university events, and leadership roles in clubs. 
+                            <!-- <span><img class="inline h-10 mx-1 rounded-full" src="/assets/images/jisoo mock.jpg"</span> -->
+                            Currently involved in cutting-edge research projects.
+                            </p>
 
                             <!-- <a class="hover:text-highlight py-4 cursor-pointer">Wanna know more about me?</a> -->
 
@@ -425,7 +427,7 @@
                   <div class="px-6 md:px-16 grid md:grid-cols-3 grid-cols-2 grid-row-2 md:grid-row-1 w-full">
                     
                     <div class="p-4 flex flex-col gap-y-4">
-                      <a href="" class="md:text-4xl text-2xl font-title font-bold hover:text-highlight cursor-pointer">
+                      <a target="_blank" href="https://www.linkedin.com/in/imveeru14/" class="md:text-4xl text-2xl font-title font-bold hover:text-highlight cursor-pointer">
                         <span class="inline md:mr-2">
                           <svg class="inline h-4" id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 370 384.166667">
                             <defs>
@@ -441,7 +443,7 @@
                         LinkedIn
                       </a>
 
-                      <a href="" class="md:text-4xl text-2xl font-title font-bold hover:text-highlight cursor-pointer">
+                      <a target="_blank" href="https://github.com/imveeru" class="md:text-4xl text-2xl font-title font-bold hover:text-highlight cursor-pointer">
                         <span class="inline md:mr-2">
                           <svg class="inline h-4" id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 370 384.166667">
                             <defs>
@@ -454,12 +456,12 @@
                             <polygon class="cls-1" points="0 0 370 0 370 384.166667 0 0"/>
                           </svg>
                         </span>
-                        LinkedIn
+                        GitHub
                       </a>
                     </div>
 
                     <div class="p-4 flex flex-col gap-y-4">
-                      <a href="" class="md:text-4xl text-2xl font-title font-bold hover:text-highlight cursor-pointer">
+                      <a target="_blank" href="behance.net/imveeru14" class="md:text-4xl text-2xl font-title font-bold hover:text-highlight cursor-pointer">
                         <span class="inline md:mr-2">
                           <svg class="inline h-4" id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 370 384.166667">
                             <defs>
@@ -472,10 +474,10 @@
                             <polygon class="cls-1" points="0 0 370 0 370 384.166667 0 0"/>
                           </svg>
                         </span>
-                        LinkedIn
+                        Behance
                       </a>
 
-                      <a href="" class="md:text-4xl text-2xl font-title font-bold hover:text-highlight cursor-pointer">
+                      <a target="_blank" href="" class="md:text-4xl text-2xl font-title font-bold hover:text-highlight cursor-pointer">
                         <span class="inline md:mr-2">
                           <svg class="inline h-4" id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 370 384.166667">
                             <defs>
@@ -488,16 +490,16 @@
                             <polygon class="cls-1" points="0 0 370 0 370 384.166667 0 0"/>
                           </svg>
                         </span>
-                        LinkedIn
+                        Dribbble
                       </a>
                     </div>
 
                     <div class="p-4 flex flex-col gap-y-4 col-span-2 md:col-span-1">
-                      <a href="" class="md:text-4xl text-2xl font-title font-bold">
+                      <a  class="md:text-4xl text-2xl font-title font-bold">
                         Stay in touch,
                       </a>
 
-                      <a href="" class="md:text-4xl text-2xl font-title font-bold hover:text-highlight cursor-pointer">
+                      <a href="mailto:imveeru14@gmail.com" class="md:text-4xl text-2xl font-title font-bold hover:text-highlight cursor-pointer">
                         imveeru14@gmail.com
                       </a>
                     </div>
