--- a/index.html
+++ b/index.html
@@ -577,7 +577,7 @@
           <div class="w-full  gap-x-6 flex md:flex-row flex-col my-4">
             
             <div class="w-full ">
-              <img class="w-[80%] m-auto" src="./assets/images/popup/dummy.jpg"/>
+              <img id="popup_image" class="w-[80%] m-auto" src="./assets/images/popup/dummy.jpg"/>
             </div>
 
             <div class="w-full  tracking-tight">
@@ -597,12 +597,7 @@
           <div class="w-full  my-4">
             <p class="font-title text-xl text-left md:text-3xl md:mb-6 mb-2 font-bold">Tools / Technology Used</p>
             <div id="tools_used" class="flex flex-row flex-wrap gap-4 md:gap-x-10 md:gap-y-12">
-              <p><span class="inline"><img class="h-8 rounded-xl mr-2 inline" src="./assets/images/tools/Python.jpg"/></span>Python</p>
-              <p><span class="inline"><img class="h-8 rounded-xl mr-2 inline" src="./assets/images/me_1000.jpg"/></span>Python</p>
-              <p><span class="inline"><img class="h-8 rounded-xl mr-2 inline" src="./assets/images/me_1000.jpg"/></span>Python</p>
-              <p><span class="inline"><img class="h-8 rounded-xl mr-2 inline" src="./assets/images/me_1000.jpg"/></span>Python</p>
-              <p><span class="inline"><img class="h-8 rounded-xl mr-2 inline" src="./assets/images/me_1000.jpg"/></span>Python</p>
-              <p><span class="inline"><img class="h-8 rounded-xl mr-2 inline" src="./assets/images/me_1000.jpg"/></span>Python</p>
+              
             </div>
           </div>
 
