--- a/index.html
+++ b/index.html
@@ -601,9 +601,9 @@
             </div>
           </div>
 
-          <div class="w-full cursor-pointer my-4 flex flex-row items-center align-center">
-            <svg class="rotate-[-90deg]  w-8 fill-white/40 group-hover:fill-black" viewBox="0 0 22 22" xmlns="http://www.w3.org/2000/svg" id="memory-arrow-bottom-right"><path d="M17 8V17H8V15H13V14H12V13H11V12H10V11H9V10H8V9H7L7 8H6V7H7V6H8L8 7H9V8H10V9H11V10H12V11H13V12H14V13H15V8H17Z" /></svg>
-            <p class="text-lg font-title hover:underline hover:text-highlight">Click for more.</p>
+          <div class="w-full group cursor-pointer my-4 flex flex-row items-center align-center">
+            <svg class="rotate-[-90deg]  w-8 fill-white/40 group-hover:fill-highlight" viewBox="0 0 22 22" xmlns="http://www.w3.org/2000/svg" id="memory-arrow-bottom-right"><path d="M17 8V17H8V15H13V14H12V13H11V12H10V11H9V10H8V9H7L7 8H6V7H7V6H8L8 7H9V8H10V9H11V10H12V11H13V12H14V13H15V8H17Z" /></svg>
+            <a target="_blank" href="" id="project_link" class="text-lg font-title group-hover:underline group-hover:text-highlight">Click for more.<a/>
           </div>
                   
       </div>
