Fixed responsive layout

--- a/index.html
+++ b/index.html
@@ -103,15 +103,39 @@
                 <div  class="group text-white/80 cursor-default relative w-full flex flex-row border-t-2 border-b-2 bg-black/30 md:bg-black/0 border-highlight overflow-x-hidden mb-24 md:mb-44 tracking-tight">
                   
                   <div class="py-3 md:py-6 animate-marquee group-hover:pause whitespace-nowrap text-white">
-                      <span class="mx-4 text-4xl">Desire</span>
-                      <span class="text-highlight mx-4 text-4xl">✱</span>
-                      <span class="mx-4 text-4xl">Design</span>
-                      <span class="text-highlight mx-4 text-4xl">✱</span>
-                      <span class="mx-4 text-4xl">Develop</span>
-                      <span class="text-highlight mx-4 text-4xl">✱</span>
+                      <span class="mx-4 text-xl md:text-4xl">Desire</span>
+                      <span class="text-highlight mx-4 text-xl md:text-4xl">✱</span>
+                      <span class="mx-4 text-xl md:text-4xl">Design</span>
+                      <span class="text-highlight mx-4 text-xl md:text-4xl">✱</span>
+                      <span class="mx-4 text-xl md:text-4xl">Develop</span>
+                      <span class="text-highlight mx-4 text-xl md:text-4xl">✱</span>
+                  </div>
+                  <div class="py-3 md:py-6 animate-marquee group-hover:pause whitespace-nowrap text-white">
+                    <span class="mx-4 text-xl md:text-4xl">Desire</span>
+                    <span class="text-highlight mx-4 text-xl md:text-4xl">✱</span>
+                    <span class="mx-4 text-xl md:text-4xl">Design</span>
+                    <span class="text-highlight mx-4 text-xl md:text-4xl">✱</span>
+                    <span class="mx-4 text-xl md:text-4xl">Develop</span>
+                    <span class="text-highlight mx-4 text-xl md:text-4xl">✱</span>
+                  </div>
+                  <div class="py-3 md:py-6 animate-marquee group-hover:pause whitespace-nowrap text-white">
+                    <span class="mx-4 text-xl md:text-4xl">Desire</span>
+                    <span class="text-highlight mx-4 text-xl md:text-4xl">✱</span>
+                    <span class="mx-4 text-xl md:text-4xl">Design</span>
+                    <span class="text-highlight mx-4 text-xl md:text-4xl">✱</span>
+                    <span class="mx-4 text-xl md:text-4xl">Develop</span>
+                    <span class="text-highlight mx-4 text-xl md:text-4xl">✱</span>
+                  </div>
+                  <div class="py-3 md:py-6 animate-marquee group-hover:pause whitespace-nowrap text-white">
+                    <span class="mx-4 text-xl md:text-4xl">Desire</span>
+                    <span class="text-highlight mx-4 text-xl md:text-4xl">✱</span>
+                    <span class="mx-4 text-xl md:text-4xl">Design</span>
+                    <span class="text-highlight mx-4 text-xl md:text-4xl">✱</span>
+                    <span class="mx-4 text-xl md:text-4xl">Develop</span>
+                    <span class="text-highlight mx-4 text-xl md:text-4xl">✱</span>
                   </div>
 
-                  <div class="py-3 md:py-6 animate-marquee group-hover:pause whitespace-nowrap text-white">
+                  <!-- <div class="py-3 md:py-6 animate-marquee group-hover:pause whitespace-nowrap text-white">
                     <span class="mx-4 text-4xl">Desire</span>
                     <span class="text-highlight mx-4 text-4xl">✱</span>
                     <span class="mx-4 text-4xl">Design</span>
@@ -136,7 +160,7 @@
                     <span class="text-highlight mx-4 text-4xl">✱</span>
                     <span class="mx-4 text-4xl">Develop</span>
                     <span class="text-highlight mx-4 text-4xl">✱</span>
-                  </div>
+                  </div> -->
 
                 </div>
               
@@ -516,7 +540,7 @@
 
     <!-- Pre loader -->
     <div id="container">
-      <div class="titles cursor-default text-white text-4xl md:text-9xl">
+      <div class="titles font-title cursor-default text-white text-4xl md:text-9xl">
         <div class="title title-1"><h1>Desire<span class="text-highlight text-lg md:text-2xl">⬤</span></h1></div>
         <div class="title title-2"><h1>Design<span class="text-highlight text-lg md:text-2xl">⬤</span></h1></div>
         <div class="title title-3"><h1>Develop<span class="text-highlight text-lg md:text-2xl">⬤</span></h1></div>
